release 2:
 * 7 extra levels (now 23 total), and changes to some existing levels
 * level selection screen (once the game has been finished)
 * combine title screen and first level
 * pause menu options: skip level, back to menu
 * performance improvements
 * slime wobbles and squashes
 * restrict window position to just off the screen
 * increase contrast in some colours
 * code cleanup, gameplay tweaks, bug fixes

release 1:
 * 9 extra levels (now 16 total), and changes to some existing levels
 * title screen
 * show cursor and text and lower music volume on pause
 * pause when the window loses focus
 * clouds in background move
 * icon
 * more keyboard controls (including AZERTY support)
 * particles when running and jumping
 * code cleanup, gameplay tweaks, bug fixes